src/test/ui/const-generics/type-dependent/issue-71348.min.stderr
error: `&'static str` is forbidden as the type of a const generic parameter
  --> $DIR/issue-71348.rs:10:24
   |
LL | trait Get<'a, const N: &'static str> {
   |                        ^^^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = help: more complex types are supported with `#[feature(const_generics)]`

error: `&'static str` is forbidden as the type of a const generic parameter
  --> $DIR/issue-71348.rs:18:25
   |
LL |     fn ask<'a, const N: &'static str>(&'a self) -> &'a <Self as Get<N>>::Target
   |                         ^^^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = help: more complex types are supported with `#[feature(const_generics)]`

error: aborting due to 2 previous errors

